{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "6793d4a1-13c0-4bc6-a181-df24463f384b",
            "actions": [
                {
                    "name": "HighBeep",
                    "type": "Button",
                    "id": "40252eeb-5330-451d-96e3-2c61f32adc61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LowBeep",
                    "type": "Button",
                    "id": "72589535-bd6a-4d36-aa92-f9a9b1f10a53",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartTutorial",
                    "type": "Button",
                    "id": "4ce2d5d8-6d94-4ff4-8ee2-064f5f87d8fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QuitTutorial",
                    "type": "Button",
                    "id": "59ebbfe4-0e4a-4b4e-be10-56e0a9faed1e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AnyKeyPressed",
                    "type": "Button",
                    "id": "6781bafa-c169-434a-88cd-22d7ef9dbddc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eeb307d7-5f92-45eb-9c58-dae2556b814a",
                    "path": "<Keyboard>/l",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HighBeep",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7c94fc8-46a1-4081-a215-afd32effc145",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LowBeep",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c66784a9-f682-456a-af92-30d868bbee98",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "StartTutorial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f10b1db2-3c3f-45b3-bcbf-0112853ac771",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "QuitTutorial",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b5489d9-2a66-4112-8f02-7f403500e395",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AnyKeyPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}